# mityu

./: .gitattributes  .gitignore  .vercelignore  BLUETOOTH_PLAYBACK_NOTICE.md  BOOTSTRAP.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRIVACY_POLICY.md  README.md  README_PACKAGE.md  TERMS_OF_SERVICE.md
.claude/: settings.json
.claude/agents/: audio-pipeline-engineer.md  db-migration-engineer.md  frontend-nextjs-engineer.md  multitenancy-guardian.md  qa-release-engineer.md  rust-tauri-core-engineer.md  security-privacy-auditor.md  sync-server-architect.md
.claude/commands/: add-tauri-command.md  audio-debug.md  db-migration.md  feature.md  fix-bug.md  phase0-validate.md  prep-multitenant.md  release.md  security-review.md  tenant-check.md
.claude/hooks/: guard-secrets.sh  rust-quality.sh  tenant-scope-check.sh  ts-quality.sh
.github/workflows/: README_DEVTEST.md  WORKFLOWS_OVERVIEW.md  build-devtest.yml  build-linux.yml  build-macos.yml  build-test.yml  build-windows.yml  build.yml  ci.yml  pr-main-check.yml  release.yml
design/logo-concepts/: index.html
docs/: BACKLOG.md  BUILDING.md  CONTRACTS.md  CONVENTIONS.md  DATA_MODEL.md  DECISIONS.md  DESIGN_READAI.md  GA_READINESS.md  GPU_ACCELERATION.md  LEGAL_SIGNOFF_V1.0.4.md  MULTITENANCY.md  PHASE0_EVIDENCE_ACQUISITION.md  PHASE0_VALIDATION.md  PILOT_V1.0.4.md  PRODUCT_INTELLIGENCE.md  RELEASE_CHECKLIST.md  RELEASE_V1.0.4.md  ROADMAP.md  SCAFFOLD.md  SECURITY_PRIVACY.md  SETUP.md  architecture.md  building_in_linux.md
eval/: README.md  jargon.txt
eval-harness/: Cargo.toml
eval-harness/src/: engines.rs  main.rs  metrics.rs  prep.rs  report.rs  wav.rs
eval/evidence/: README.md  manifest.template.csv
frontend/: API.md  README.md  build-gpu.bat  build-gpu.ps1  build-gpu.sh  build.bat  build.ps1  build_backup.bat  dev-gpu.bat  dev-gpu.ps1  dev-gpu.sh  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
frontend/src-tauri/: Cargo.toml  NOTIFICATION_TESTING.md  build.rs  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/migrations/: 20251101000000_add_summary_backup.sql  20251105120000_add_pro_license_custom_openai.sql  20251110000000_add_grace_period_to_licensing.sql  20251110000001_add_speaker_field.sql  20251223000000_add_meeting_notes.sql  20251229000000_add_gemini_api_key.sql  (+6 more)
landing/: README.md  index.html  package.json  privacy.html  vercel.json
landing/api/: download.js  register-download.js
landing/tests/: download.test.mjs  register-download.test.mjs
scripts/: generate-update-manifest-github.js  inject_transcript.py  test-update-locally.js
tools/phase0/: verify-evidence.ps1
tools/updater-signature-verifier/: Cargo.toml
(+274 files in other folders)
